organized the files and completed the responsive image layout as well as fixed the issue where the loading state would not change on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -66,28 +66,15 @@ input {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .photo-container ul {
     line-height: 0;
+    column-gap: 4px !important;
+    column-count: 4;
     /* display: flex; */
     /* flex-flow: row wrap; */
     /* justify-content: space-between; */
     /* align-items: flex-start; */
-    column-count: 4;
-    column-gap: 4px !important;
+
 }
 
 .photo-container ul li {
@@ -103,23 +90,30 @@ input {
 .photo-container ul img {
     width: 100%;
 }
+@media (max-width: 1000px) {
+    .photo-container ul {
+    -moz-column-count:    4;
+    -webkit-column-count: 4;
+    column-count:         4;
+    }
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 800px) {
+    .photo-container ul {
+    -moz-column-count:    3;
+    -webkit-column-count: 3;
+    column-count:         3;
+    }
+  }
+  @media (max-width: 600px) {
+    .photo-container ul {
+    -moz-column-count:    2;
+    -webkit-column-count: 2;
+    column-count:         2;
+    }
+  }
 
 /* Overlay configuration */
-
 .overlay {
     margin: 0;
     padding: 0;
@@ -152,7 +146,6 @@ input {
     align-items: center;
 }
 
-
 /* End of overlay configuration */
 
 svg {
@@ -170,12 +163,10 @@ svg {
     margin-top: 4em
 }
 
-
-
 /* Spinner configuration */
 
 .ispinner {
-    margin: 180px auto;
+    margin: 130px auto;
     position: relative;
     width: 20px;
     height: 20px
@@ -337,37 +328,21 @@ svg {
         opacity: .25
     }
 }
-
 /* End of Spinner configuration */
-
-
-
-
-
-
-
 
 @media only screen and (max-width:767px) {
     body {
         padding-top: 2em
     }
-
-
-
-
     .photo-container li {
         margin: auto
     }
-
-
-
 }
 
 @media only screen and (min-width:768px) {
     body {
         padding-top: 4em
     }
-
     /* container contains all HTML elements*/
     .container {
         max-width: 960px;
